--- a/src/Components/BodyComponents/ContactComponents/ContactForm.css
+++ b/src/Components/BodyComponents/ContactComponents/ContactForm.css
@@ -127,6 +127,7 @@
         transition: 1s;
         outline: none;
         cursor: pointer;
+        margin-top: .8rem;
     
     }
     .input-submit:hover{
@@ -143,6 +144,7 @@
         color: white;
         padding: 0.1rem 0.2rem;
         font-weight: 300;
+        letter-spacing: 1px;
 
     }
     
@@ -167,4 +169,11 @@
 
     .hideAlert{
         display: none;
+    }
+
+    .form-btn-group{
+        /* border: 1px solid red; */
+        display: flex;
+        justify-content: space-around;
+        padding: 0.4rem 0rem;
     }
