--- a/src/Components/BodyComponents/AboutComponents/AMedia.css
+++ b/src/Components/BodyComponents/AboutComponents/AMedia.css
@@ -504,7 +504,8 @@
         font-weight: 300;
         text-align: justify;
         word-spacing: normal;
-        line-height: 18px;
+        letter-spacing: normal;
+        line-height: normal;
         /* border: 1px solid yellow; */
       
       }
