--- a/src/Components/BodyComponents/ContactComponents/ContactForm.css
+++ b/src/Components/BodyComponents/ContactComponents/ContactForm.css
@@ -97,6 +97,7 @@
         color: #f2f2f7;
         resize: none;
         background-color: transparent;    
+        /* border: 1px solid red; */
     
     }
     
